crates/shingetsu-compiler/tests/compile_fail/enum_empty.rs
use shingetsu::FromLua;

#[derive(FromLua)]
enum Bad {}

fn main() {}
